--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Educational_Logo__TRB__with_Teaching_Review_Board-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teacher Review Board Platform</title>
+    <meta name="description" content="Teaching Review Board - A transparent platform for student feedback and teacher evaluation." />
+    <meta name="theme-color" content="#1e293b" />
+    <title>Teaching Review Board - Transparent Teacher Evaluation Platform</title>
   </head>
   <body>
     <div id="root"></div>
